[gd_scene load_steps=15 format=2]

[ext_resource path="res://CrossingBridge/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/base.tres" type="Theme" id=2]
[ext_resource path="res://CrossingBridge/Assets/köprü3.jpg" type="Texture" id=3]
[ext_resource path="res://CrossingBridge/Assets/guitheki.png" type="Texture" id=4]
[ext_resource path="res://CrossingBridge/Assets/marthagu.png" type="Texture" id=5]
[ext_resource path="res://CrossingBridge/Assets/marygui.png" type="Texture" id=6]
[ext_resource path="res://CrossingBridge/Assets/lilredgu.png" type="Texture" id=7]
[ext_resource path="res://CrossingBridge/Assets/lamp.jpg" type="Texture" id=8]
[ext_resource path="res://CrossingBridge/Char.gd" type="Script" id=9]
[ext_resource path="res://assets/Poppins-Medium.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://CrossingBridge/Assets/Usain Bolt.jpg" type="Texture" id=11]
[ext_resource path="res://CrossingBridge/Assets/reinfor3.jpg" type="Texture" id=12]
[ext_resource path="res://CrossingBridge/Assets/Dustin.jpg" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 10 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.564706, 0.839216, 1, 1 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Asli" type="Control" parent="MarginContainer/ColorRect"]
margin_left = 10.0
margin_top = 380.0
margin_right = 70.0
margin_bottom = 440.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ColorRect/Asli"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/ColorRect/Asli"]
margin_top = -20.0
margin_right = 40.0
margin_bottom = 3.0
text = "Asli - 1"
align = 1
valign = 1

[node name="Ali" type="Control" parent="MarginContainer/ColorRect"]
margin_left = 35.0
margin_top = 458.0
margin_right = 95.0
margin_bottom = 518.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ColorRect/Ali"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/ColorRect/Ali"]
margin_top = -20.0
margin_right = 40.0
margin_bottom = 3.0
text = "Ali - 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Necdet" type="Control" parent="MarginContainer/ColorRect"]
margin_left = 66.0
margin_top = 524.0
margin_right = 126.0
margin_bottom = 584.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ColorRect/Necdet"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/ColorRect/Necdet"]
margin_top = -20.0
margin_right = 40.0
margin_bottom = 3.0
text = "Necdet - 6"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selin" type="Control" parent="MarginContainer/ColorRect"]
margin_left = 159.0
margin_top = 541.0
margin_right = 219.0
margin_bottom = 601.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ColorRect/Selin"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/ColorRect/Selin"]
margin_top = -20.0
margin_right = 40.0
margin_bottom = 3.0
text = "Selin - 10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lamp" type="Control" parent="MarginContainer/ColorRect"]
margin_left = 100.0
margin_top = 435.0
margin_right = 150.0
margin_bottom = 485.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ColorRect/Lamp"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="Score" type="Label" parent="MarginContainer/ColorRect"]
margin_left = 40.0
margin_top = 30.0
margin_right = 95.0
margin_bottom = 53.0
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndGame" type="ColorRect" parent="MarginContainer"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.564706, 0.839216, 1, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/EndGame"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 350.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndScore" type="Label" parent="MarginContainer/EndGame/VBoxContainer"]
margin_left = 123.0
margin_right = 277.0
margin_bottom = 35.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "End Score: 18"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P" type="Label" parent="MarginContainer/EndGame/VBoxContainer"]
margin_left = 117.0
margin_top = 39.0
margin_right = 282.0
margin_bottom = 74.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "“USAIN BOLT!”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dustin" type="TextureRect" parent="MarginContainer/EndGame"]
visible = false
margin_left = 335.0
margin_top = 147.0
margin_right = 683.0
margin_bottom = 536.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bridge" type="TextureRect" parent="MarginContainer/EndGame"]
visible = false
margin_left = 22.0
margin_top = 134.0
margin_right = 989.0
margin_bottom = 538.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Usain" type="TextureRect" parent="MarginContainer/EndGame"]
visible = false
margin_left = 182.0
margin_top = 130.0
margin_right = 873.0
margin_bottom = 536.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control3"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -40.0
margin_right = 154.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="MarginContainer/Control3/HBoxContainer"]
margin_top = 4.0
margin_right = 52.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgain" type="Button" parent="MarginContainer/Control3/HBoxContainer"]
visible = false
margin_left = 56.0
margin_top = 4.0
margin_right = 144.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "Try again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Control3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -121.0
margin_top = -40.0
margin_right = 121.0
margin_bottom = -9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearSelection" type="Button" parent="MarginContainer/Control3/HBoxContainer2"]
margin_right = 135.0
margin_bottom = 31.0
text = "Clear selection"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBtn" type="Button" parent="MarginContainer/Control3/HBoxContainer2"]
margin_left = 139.0
margin_right = 242.0
margin_bottom = 31.0
text = "GO GO GO!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AsliBeginPos" type="Position2D" parent="."]
position = Vector2( 75.9208, 225.389 )

[node name="AsliEndPos" type="Position2D" parent="."]
position = Vector2( 835.522, 30.3298 )

[node name="AliBeginPos" type="Position2D" parent="."]
position = Vector2( 175.503, 185.165 )

[node name="AliEndPos" type="Position2D" parent="."]
position = Vector2( 935.668, 36.4705 )

[node name="NectdetBeginPos" type="Position2D" parent="."]
position = Vector2( 270.184, 503.714 )

[node name="NectdetEndPos" type="Position2D" parent="."]
position = Vector2( 923.198, 310.753 )

[node name="SelinBeginPos" type="Position2D" parent="."]
position = Vector2( 368.201, 469.084 )

[node name="SelinEndPos" type="Position2D" parent="."]
position = Vector2( 891.755, 230.401 )

[node name="LampBeginPos" type="Position2D" parent="."]
position = Vector2( 103.769, 421.565 )

[node name="LampEndPos" type="Position2D" parent="."]
position = Vector2( 811.836, 85 )

[connection signal="gui_input" from="MarginContainer/ColorRect/Asli" to="." method="_on_Asli_gui_input"]
[connection signal="gui_input" from="MarginContainer/ColorRect/Ali" to="." method="_on_Ali_gui_input"]
[connection signal="gui_input" from="MarginContainer/ColorRect/Necdet" to="." method="_on_Necdet_gui_input"]
[connection signal="gui_input" from="MarginContainer/ColorRect/Selin" to="." method="_on_Selin_gui_input"]
[connection signal="pressed" from="MarginContainer/Control3/HBoxContainer2/ClearSelection" to="." method="_on_ClearSelection_pressed"]
[connection signal="pressed" from="MarginContainer/Control3/HBoxContainer2/GoBtn" to="." method="_on_GoBtn_pressed"]
